# TSGL

./: .gitignore  README.md  component.mk  idf_component.yml
TSGL/: CMakeLists.txt  TSGL.c  TSGL.h  TSGL_benchmark.c  TSGL_benchmark.h  TSGL_bmp.c  TSGL_bmp.h  TSGL_color.c  TSGL_color.h  TSGL_display.c  TSGL_display.h  TSGL_filesystem.c  TSGL_filesystem.h  TSGL_font.c  TSGL_font.h  TSGL_framebuffer.c  TSGL_framebuffer.h  TSGL_gfx.c  TSGL_gfx.h  TSGL_gui.c  TSGL_gui.h  TSGL_i2c.h  TSGL_keyboard.c  TSGL_keyboard.h  TSGL_ledc.c  TSGL_math.c  TSGL_math.h  TSGL_sound.c  TSGL_sound.h  TSGL_spi.c  TSGL_spi.h  TSGL_touchscreen.c  TSGL_touchscreen.h
TSGL/TSGL_drivers/: pcd8544.c  pcd8544.h  st77XX.c  st77XX.h
TSGL/TSGL_fonts/: default.h  (+2 more)
backup/: TSGL.hpp  TSGL_color.c  TSGL_display — копия.c  TSGL_spi.c  rotation.c
espTSGL/: TSGL.c  TSGL.h  TSGL_color.c  TSGL_color.h  TSGL_display — копия.c  TSGL_display.c  TSGL_display.h  TSGL_framebuffer.c  TSGL_framebuffer.h  TSGL_spi.c  TSGL_spi.h  library.properties
examples/smart_speaker/main/: CMakeLists.txt  gui.c  main.c  system.c  system.h
examples/tsgl_test/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
gfxTSGL/: TSGL.c  TSGL.h  TSGL.hpp  TSGL_benchmark.c  TSGL_benchmark.h  TSGL_color.c  TSGL_color.h  TSGL_display.c  TSGL_display.h  TSGL_filesystem.c  TSGL_filesystem.h  TSGL_font.c  TSGL_font.h  TSGL_framebuffer.c  TSGL_framebuffer.h  TSGL_gfx.c  TSGL_gfx.h  TSGL_gui.c  TSGL_gui.h  TSGL_i2c.c  TSGL_i2c.h  TSGL_keyboard.c  TSGL_keyboard.h  TSGL_ledc.c  TSGL_ledc.h  TSGL_math.h  TSGL_sound.c  TSGL_sound.h  TSGL_spi.c  TSGL_spi.h  TSGL_touchscreen.c  TSGL_touchscreen.h  _TSGL_internal_gfx.h  library.properties
(+47 files in other folders)
